Closed Bug 1660100 Opened 5 years ago Closed 5 years ago

The "Firefox is already running" and "Profile missing" startup error dialogs are suddenly much taller than necessary (and so are various other dialogs)

Categories

(Core :: Widget: Gtk, defect, P2)

defect

Tracking

()

VERIFIED FIXED
82 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox79 --- unaffected
firefox80 --- unaffected
firefox81 + verified
firefox82 --- verified

People

(Reporter: dholbert, Assigned: stransky)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

STR:

  1. Start firefox from the command line, specifying a specific directory to use as a profile:
mkdir /tmp/profile; firefox -no-remote -profile /tmp/profile
  1. Repeat step 1, in a second terminal window.
  2. Look at the "Firefox is already running" dialog that appears.

EXPECTED RESULTS:
The dialog should be about as tall as its content.

ACTUAL RESULTS:
The dialog is unexpectedly tall, with a bunch of blank space towards the bottom.

I think this regressed relatively recently.

Attachment #9171044 - Attachment description: screenshot of bug (unnecessary tall dialog) → screenshot of bug (unnecessary tall dialog), in Nightly 81.0a1 (2020-08-19)

Bugbug thinks this bug should belong to this component, but please revert this change in case of error.

Component: General → Startup and Profile System
Product: Firefox → Toolkit

Tighter regression range (obtained using mozregression):
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=9498aff64f062c246ccdec5013236bd03470b609&tochange=003b4ce4b7e1adca10b2d8600e89f7263af1887e

Looks like a regression from bug 1651748 which made some changes to widget/gtk/nsWindow.cpp

stransky, could you take a look?

Flags: needinfo?(stransky)
Regressed by: 1651748
Has Regression Range: --- → yes

I've found some easier steps to reproduce -- in particular, you don't need to start two Firefox instances simultaneously:

# First, ensure that the directory "/tmp/foobar123" does not exist. Then, run:
firefox -no-remote -profile /tmp/foobar123

This gives me a "Profile Missing" error dialog (because indeed, /tmp/foobar123 does not exist); and that dialog is awkwardly-tall in today's Nightly, just like the "Firefox is already running" dialog in the attached screenshots.

Also, I'm requesting tracking to ensure this is on release management's radar.
[Tracking Requested - why for this release]: regression in 81 (late in the nightly cycle)

Component: Startup and Profile System → Widget: Gtk
Product: Toolkit → Core

(BTW I'm on Ubuntu 20.04, if this happens to be distro-dependent.)

Summary: The "Firefox is already running" dialog is suddenly much taller than necessary → The "Firefox is already running" and "Profile missing" startup error dialogs are suddenly much taller than necessary

Okay, will look at it.

Assignee: nobody → stransky
Flags: needinfo?(stransky)
Priority: -- → P3

Changing the priority to p2 as the bug is tracked by a release manager for the current nightly.
See What Do You Triage for more information

Priority: P3 → P2

Bug 1660500 is another recent case of larger than normal windows.

  • Revert Bug 1658885 - use Gtk styles to get CSD sizes.
  • Add CSD decoration sizes to titlebar-less windows only.
Summary: The "Firefox is already running" and "Profile missing" startup error dialogs are suddenly much taller than necessary → The "Firefox is already running" and "Profile missing" startup error dialogs are suddenly much taller than necessary (and so are various other dialogs)
Pushed by btara@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f08caac0e0ab [Linux/Gtk] Add CSD decorations size only to windows without system titlebar, r=jhorak
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch

The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(stransky)

Comment on attachment 9171907 [details]
Bug 1660100 [Linux/Gtk] Add CSD decorations size only to windows without system titlebar, r?jhorak

Beta/Release Uplift Approval Request

  • User impact if declined: Wrong window sizes on Linux/Gtk.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Run Firefox with non-existing profile, i.e.:

firefox -no-remote -profile /tmp/foobar123

and check if the dialog size is OK.

  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We're reverting changes from Bug 1658885 so we will use already tested code.
    We update size restrictions for titlebar-less windows which WebRTC indicator only right now.
    Another titlebar-less window is PIP and it does not use maximal size constraints.
  • String changes made/needed:
Flags: needinfo?(stransky)
Attachment #9171907 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9171907 [details]
Bug 1660100 [Linux/Gtk] Add CSD decorations size only to windows without system titlebar, r?jhorak

Approved for 81.0b5.

Attachment #9171907 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Hi all,
I have verified the following by using the steps provided in comment 6 on Firefox Beta 81.0b2 and 81.0b6 (64-bit) and FF Nightly from 2020-08-19 and today with Ubuntu 18:

On the older version, the warning message had extra blank space.
On the latest version, the warning message had the right size.

Regards, Flor.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Regressions: 1673292
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: