Bug 1660100 [Linux/Gtk] Add CSD decorations size only to windows without system titlebar, r=jhorak

- Revert Bug 1658885 - use Gtk styles to get CSD sizes.
- Add CSD decoration sizes to titlebar-less windows only.

Differential Revision: https://phabricator.services.mozilla.com/D88139